# cmdkit

./: CMakeLists.txt  LICENSE  README.md
example/: use_cmdkit.cpp  use_command.cpp  use_result.cpp  use_terminal.cpp
include/: cmdkit.hpp  command.hpp  result.hpp  terminal.hpp
